# graph-recommendation-system-demo

./: .env  .gitignore  Makefile  README.md  clean_data.py  neo4j_code  pyproject.toml  results.txt
assets/: full_schema_prior_mapping.csv  most_popular_books_by_reads.csv  pride_recommendations.csv  recommended_after_84.csv  top_based_on_popular.csv
data/neo4j/: db_loader.cypher
data/neo4j/import/: clean_full_publishers.csv  clean_publishers.csv  clean_years_of_publication.csv
data/neo4j/import_bckp/: clean_full_authors.csv  clean_full_years_of_publication.csv  clean_users.csv
data/neo4j_db/import/: clean_authors.csv  clean_books.csv  clean_ratings.csv  clean_users.csv  names.csv
recommendations/: __init__.py  conn.py  consts.py  encoders.py  main.py  models.py  train.py
